# yqy-bot

./: .env.example  .gitignore  .readthedocs.yaml  Cargo.toml  Dockerfile  README.md  README.zh.md  pyproject.toml
.github/ISSUE_TEMPLATE/: ecosystem-submission.yml
.github/workflows/: changelog.yml  check.yml  release.yml
docs/: Makefile  concepts.rst  conf.py  index.rst  installation.rst  make.bat  quickstart.rst  requirements.txt
docs/_ext/: iamai_blog.py  iamai_i18n_versions.py  iamai_mermaid.py  iamai_store.py
docs/_static/: custom.css  iamai-blog.css  iamai-docs-switcher.css  iamai-docs-switcher.js  iamai-mermaid.js  iamai-store.css  iamai-store.js
docs/community/: index.rst  store.rst
docs/ecosystem/: index.rst
docs/guides/: adapters.rst  agent-runtime.rst  architecture.rst  configuration.rst  ecosystem-comparison.rst  index.rst  operations.rst  plugins.rst  roadmap.rst  state-and-sessions.rst
docs/locales/: README.md
docs/reference/: cli.rst  configuration.rst  docs-i18n-versions.rst  extensions.rst  index.rst  quality-gates.rst  rules.rst  webhook-signatures.rst
docs/tutorials/: index.rst  part-1-terminal-runtime.rst  part-2-commands-rules.rst  part-3-state-sessions.rst  part-4-webhook-production.rst  part-5-adapter-development.rst  part-6-ecosystem-publishing.rst
examples/_shared/: README.md  pyproject.toml
examples/arcade-runtime/: README.md  config.onebot11.napcat.ws_reverse.toml  config.terminal.toml  pyproject.toml  run.py
examples/echo-runtime/: README.md  config.onebot11.http.toml  config.onebot11.napcat.ws_reverse.toml  config.onebot11.ws.toml  config.onebot11.ws_reverse.toml  config.terminal.toml  config.webhook.toml  pyproject.toml  run.py
examples/group-assistant-runtime/: README.md  config.onebot11.napcat.ws_reverse.toml  config.terminal.toml  pyproject.toml  run.py
examples/life-sim-runtime/: README.md  config.onebot11.napcat.ws_reverse.toml  config.terminal.toml  pyproject.toml  run.py
examples/persona-rp-runtime/: README.md  config.onebot11.napcat.ws_reverse.toml  config.terminal.toml  pyproject.toml  run.py
examples/planner-executor-runtime/: README.md  config.onebot11.napcat.ws_reverse.toml  config.terminal.toml  pyproject.toml  run.py
examples/planner-executor-runtime/src/planner_executor_runtime/plugins/: executor.py  planner.py  session.py
examples/react-runtime/: README.md  config.onebot11.napcat.ws_reverse.toml  config.terminal.toml  pyproject.toml  run.py
examples/react-runtime/src/react_runtime/plugins/: mcp.py  memory.py  reactor.py  tools.py
examples/skill-chat-runtime/: README.md  config.terminal.toml  pyproject.toml  run.py
examples/skill-chat-runtime/src/skill_chat_runtime/: __init__.py  skilllib.py
examples/skill-chat-runtime/src/skill_chat_runtime/data/: __init__.py  route_rules.json  seed_skills.json  stopwords.txt
examples/skill-chat-runtime/src/skill_chat_runtime/plugins/: __init__.py  memory.py  router.py  skills.py  tools.py
examples/state-runtime/: README.md  config.terminal.toml  pyproject.toml
examples/story-runtime/: README.md  config.terminal.toml  (+3 more)
examples/supervisor-team-runtime/: README.md  config.onebot11.napcat.ws_reverse.toml  config.terminal.toml  pyproject.toml  run.py
examples/supervisor-team-runtime/src/supervisor_team_runtime/plugins/: briefing.py  supervisor.py  workers.py
examples/yqy_bot/: README.md  config.onebot11.napcat.ws_reverse.toml  config.terminal.toml  pyproject.toml  run.py
examples/yqy_bot/config/: active_life.json  behavior.json  bot.json  fact_guard.json  human_behavior.json  memes.json  memory_filter.json  mood.json  persona_rules.json  prompt.json  reflection.json  relation.json  users.json
examples/yqy_bot/doc/: 全链路实现.md  架构说明.md
examples/yqy_bot/scripts/: check_fake_facts.py  clean_fake_facts.py
examples/yqy_bot/services/: __init__.py  active_chat_generator.py  behavior.py  config_service.py  conversation_intelligence.py  db.py  fact_guard.py  history.py  human_behavior.py  meme_commands.py  meme_server.py  meme_service.py  memory.py  memory_filter.py  mood.py  napcat_api.py  persona.py  prompt_builder.py  reasoning.py  reflection.py  relation.py  social_memory.py
examples/yqy_bot/src/yqy_bot/plugins/: active_life.py  chat.py
examples/yqy_bot/test/: test_meme_send.py
scripts/: check_example_configs.sh  typecheck.sh  validate_ecosystem_store.py
src/: lib.rs
tests/: test_adapter_conformance.py  test_adapter_middleware.py  test_agent_tools.py  test_docs_content.py  test_docs_extensions.py  test_docs_i18n_versions.py  test_echo_runtime_management.py  test_ecosystem_store.py  test_example_llm.py  test_logging_config.py  test_management_api.py  test_package_discovery.py  test_rules_engine.py  test_runtime_introspection.py  test_runtime_safety.py  test_telegram_adapter.py
项目架构/: adapter.md  agent.md  core.md  iamai-arch.md  observability.md  runtime.md
(+83 files in other folders)
