[project]
name = "react-runtime"
version = "0.1.0"
description = "ReAct loop iamai example."
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.4.2",
    "iamai",
    "iamai-example-utils",
]

[tool.uv.sources]
iamai = { workspace = true }
iamai-example-utils = { workspace = true }
