[project]
name = "skill-chat-runtime"
version = "0.1.0"
description = "Minimal chatbot example with traces, skill manifests, and skill routing."
requires-python = ">=3.10"
dependencies = [
    "iamai",
    "iamai-example-utils",
]

[tool.uv.sources]
iamai = { workspace = true }
iamai-example-utils = { workspace = true }
