[project]
name = "supervisor-team-runtime"
version = "0.1.0"
description = "Supervisor multi-agent iamai example."
requires-python = ">=3.10"
dependencies = [
    "iamai",
    "iamai-example-utils",
]

[tool.uv.sources]
iamai = { workspace = true }
iamai-example-utils = { workspace = true }
